--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,7 @@
 @string{aps = {American Physical Society,}}
 
 @article{margossian2025generalized,
+  bibtex_show={true},
   title={Generalized Guarantees for Variational Inference in the Presence of Even and Elliptical Symmetry},
   author={Margossian, Charles C and Saul, Lawrence K},
   journal={arXiv preprint arXiv:2511.01064},
@@ -13,6 +14,7 @@
 }
 
 @book{einstein1920relativity,
+  bibtex_show={true},
   title={Relativity: the Special and General Theory},
   author={Einstein, Albert},
   year={1920},
@@ -22,6 +24,7 @@
 }
 
 @article{margossian2025generalized,
+  bibtex_show={true},
   title={Generalized Guarantees for Variational Inference in the Presence of Even and Elliptical Symmetry},
   author={Margossian, Charles C and Saul, Lawrence K},
   journal={arXiv preprint arXiv:2511.01064},
@@ -32,6 +35,7 @@
 
 
 @article{margossian2025generalized,
+  bibtex_show={true},
   title={Generalized Guarantees for Variational Inference in the Presence of Even and Elliptical Symmetry},
   author={Margossian, Charles C and Saul, Lawrence K},
   journal={arXiv preprint arXiv:2511.01064},
@@ -51,6 +55,7 @@
 }
 
 @article{einstein1950meaning,
+  bibtex_show={true},
   abbr={AJP},
   bibtex_show={true},
   title={The meaning of relativity},
@@ -65,6 +70,7 @@
 }
 
 @article{PhysRev.47.777,
+  bibtex_show={true},
   abbr={PhysRev},
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
   author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
@@ -94,6 +100,7 @@
 }
 
 @article{einstein1905molekularkinetischen,
+  bibtex_show={true},
   title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
   author={Einstein, A.},
   journal={Annalen der physik},
@@ -106,6 +113,7 @@
 }
 
 @article{einstein1905movement,
+  bibtex_show={true},
   abbr={Ann. Phys.},
   title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
   author={Einstein, A.},
@@ -117,6 +125,7 @@
 }
 
 @article{einstein1905electrodynamics,
+  bibtex_show={true},
   title={On the electrodynamics of moving bodies},
   author={Einstein, A.},
   year={1905},
