--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -159,3 +159,27 @@
   abbr={Vision},
   type={conference}
 }
+
+
+
+
+@article{margossian2025generalized,
+  bibtex_show={true},
+  title={Generalized Guarantees for Variational Inference in the Presence of Even and Elliptical Symmetry},
+  author={Margossian, Charles C and Saul, Lawrence K},
+  journal={arXiv preprint arXiv:2511.01064},
+  year={2025},
+  type={acknowledgement},
+  arxiv={2511.01064}
+}
+
+@article{margossian2024variational,
+  bibtex_show={true},
+  title={Variational inference in location-scale families: Exact recovery of the mean and correlation matrix},
+  author={Margossian, Charles C and Saul, Lawrence K},
+  journal={arXiv preprint arXiv:2410.11067},
+  year={2024},
+  type={acknowledgement},
+  arxiv={2410.11067}
+}
+
