--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,6 +23,21 @@
   html={relativity.html}
 }
 
+@article{example2023,
+  title={Example Paper Title},
+  author={Smith, John and Doe, Jane},
+  journal={Nature},
+  year={2023},
+  type={journal},
+  abbr={Nature},
+  bibtex_show={true},
+  preview={example.gif},
+  html={https://doi.org/10.1234/example},
+  pdf={example.pdf},
+  abstract={Your abstract here...},
+  selected={true}
+}
+
 @article{margossian2025generalized,
   bibtex_show={true},
   title={Generalized Guarantees for Variational Inference in the Presence of Even and Elliptical Symmetry},
