--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,27 +1,77 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+% Journal Articles
+
+@article{rankin2025rad,
+  bibtex_show={true},
+  type={journal},
+  title={RAD-Median and trimmed mean, new multivariate generalizations of the classical estimators},
+  author={Rankin, Isaac and Zhou, Julie},
+  journal={Communications in Statistics-Simulation and Computation},
+  pages={1--19},
+  year={2025},
+  publisher={Taylor \& Francis}
+}
+
+@article{rankin2024bayesian,
+  bibtex_show={true},
+  type={journal},
+  title={Bayesian and maximin A-optimal designs for spline regression models with unknown knots},
+  author={Rankin, Isaac and Zhou, Julie},
+  journal={Statistical Papers},
+  volume={65},
+  number={4},
+  pages={2011--2032},
+  year={2024},
+  publisher={Springer}
+}
+
+
+
+% Posters
+@article{rankin2024bayesian,
+  bibtex_show={true},
+  type={poster},
+  url={https://www.uvic.ca/science/math-statistics/home/home/announcements/archive/ning-rankin-cssc.php},
+  title={Bayesian and maximin A-optimal designs for spline regression models with unknown knots},
+  author={Rankin, Isaac and Zhou, Julie},
+  journal={Statistical Papers},
+  volume={65},
+  number={4},
+  pages={2011--2032},
+  year={2024},
+  publisher={Springer}
+}
+
+
+
+% Acknowledgements
 
 @article{margossian2025generalized,
   bibtex_show={true},
+  type={acknowledgement},
   title={Generalized Guarantees for Variational Inference in the Presence of Even and Elliptical Symmetry},
   author={Margossian, Charles C and Saul, Lawrence K},
   journal={arXiv preprint arXiv:2511.01064},
   year={2025},
-  type={preprint},
   arxiv={2511.01064}
 }
 
-@book{einstein1920relativity,
+@article{margossian2024variational,
   bibtex_show={true},
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  type={journal},
-  html={relativity.html}
+  type={acknowledgement},
+  title={Variational inference in location-scale families: Exact recovery of the mean and correlation matrix},
+  author={Margossian, Charles C and Saul, Lawrence K},
+  journal={arXiv preprint arXiv:2410.11067},
+  year={2024},
+  arxiv={2410.11067}
 }
+
+
+
+
+
 
 @article{example2023,
   title={Example Paper Title},
@@ -37,17 +87,6 @@
   abstract={Your abstract here...},
   selected={true}
 }
-
-@article{margossian2025generalized,
-  bibtex_show={true},
-  title={Generalized Guarantees for Variational Inference in the Presence of Even and Elliptical Symmetry},
-  author={Margossian, Charles C and Saul, Lawrence K},
-  journal={arXiv preprint arXiv:2511.01064},
-  year={2025},
-  type={journal},
-  arxiv={2511.01064}
-}
-
 
 @article{margossian2025generalized,
   bibtex_show={true},
@@ -177,24 +216,4 @@
 
 
 
-
-@article{margossian2025generalized,
-  bibtex_show={true},
-  title={Generalized Guarantees for Variational Inference in the Presence of Even and Elliptical Symmetry},
-  author={Margossian, Charles C and Saul, Lawrence K},
-  journal={arXiv preprint arXiv:2511.01064},
-  year={2025},
-  type={acknowledgement},
-  arxiv={2511.01064}
-}
-
-@article{margossian2024variational,
-  bibtex_show={true},
-  title={Variational inference in location-scale families: Exact recovery of the mean and correlation matrix},
-  author={Margossian, Charles C and Saul, Lawrence K},
-  journal={arXiv preprint arXiv:2410.11067},
-  year={2024},
-  type={acknowledgement},
-  arxiv={2410.11067}
-}
 
