--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,7 +33,7 @@
 @article{rankin2024bayesian,
   bibtex_show={true},
   type={poster},
-  url={https://www.uvic.ca/science/math-statistics/home/home/announcements/archive/ning-rankin-cssc.php},
+  html={https://www.uvic.ca/science/math-statistics/home/home/announcements/archive/ning-rankin-cssc.php},
   title={Bayesian and maximin A-optimal designs for spline regression models with unknown knots},
   author={Rankin, Isaac and Zhou, Julie},
   journal={Statistical Papers},
@@ -78,7 +78,7 @@
   author={Smith, John and Doe, Jane},
   journal={Nature},
   year={2023},
-  type={journal},
+  type={workshop},
   abbr={Nature},
   bibtex_show={true},
   preview={example.gif},
@@ -119,7 +119,7 @@
   number={6},
   pages={403--404},
   year={1950},
-  type={conference},
+  type={workshop},
   publisher={American Association of Physics Teachers}
 }
 
@@ -149,7 +149,7 @@
   additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
   annotation={* Example use of superscripts<br>† Albert Einstein},
   selected={true},
-  type={conference},
+  type={workshop},
   inspirehep_id = {3255}
 }
 
@@ -162,7 +162,7 @@
   number={8},
   pages={549--560},
   year={1905},
-  type={poster},
+  type={workshop},
   publisher={Wiley Online Library}
 }
 
@@ -174,7 +174,7 @@
   journal={Ann. Phys.},
   volume={17},
   pages={549--560},
-  type={preprint},
+  type={workshop},
   year={1905}
 }
 
@@ -183,7 +183,7 @@
   title={On the electrodynamics of moving bodies},
   author={Einstein, A.},
   year={1905},
-  type={conference}
+  type={workshop}
 }
 
 @Article{einstein1905photoelectriceffect,
@@ -198,9 +198,9 @@
   pages={132--148},
   year={1905},
   doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
+  award={Albert Einstein received the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
   award_name={Nobel Prize},
-  type={poster}
+  type={workshop}
 }
 
 @book{przibram1967letters,
@@ -211,7 +211,7 @@
   publisher={Vision},
   preview={wave-mechanics.gif},
   abbr={Vision},
-  type={conference}
+  type={workshop}
 }
 
 
